src/test/resources/LO-2/InvalidPrograms/test_23.lo
// *Bad testcase*
// Undefined functions: notice "Foo" vs "foo"

int main()
{
    int a;
    {
       a = 5;
       return foo(a);
    }
}

int Foo(int a) {
    {
        return a;
    }
}